Implemented additional style.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Dan Spencer Resume</title>
 
     <!-- Bootstrap -->
-    <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -34,63 +34,73 @@
     </nav>
 
     <div class="container">
-    <h1>Dan Spencer</h1>
+      <div class="header clearfix">
+        <h1>Dan Spencer</h1>
+        <ul class="clearfix">
+          <li class="first"><a href="mailto:da_spencer@hotmail.com">da_spencer@hotmail.com</a></li>
+          <li><a href="tel:7056628469">705-662-8469</a></li>
+          <li class="last">Garson, ON</li>
+        </ul>
+      </div>
 
-    <h2>Education</h2>
+      <section id="Education">
+        <h2>Education</h2>
 
-    <h3>Bachelor in Computer Science - <em>Laurentian University</em></h3>
-    September 2000 - May 2004
-    <ul>
-      <li>Graduated with honours</li>
-    </ul>
+        <h3>Bachelor in Computer Science - <em>Laurentian University</em></h3>
+        September 2000 - May 2004
+        <ul>
+          <li>Graduated with honours</li>
+        </ul>
+      </section>
+      <section id="Experience">
+        <h2>Experience</h2>
 
-    <h2>Experience</h2>
+        <h3>Senior Programmer/Analyst - <em>City of Greater Sudbury</em></h3>
+        June 2012 - Present
 
-    <h3>Senior Programmer/Analyst - <em>City of Greater Sudbury</em></h3>
-    June 2012 - Present
+        <ul>
+          <li>Created and deployed Ruby on Rails applications with integrations to legacy .NET systems</li>
+          <li>Created and deployed .NET MVC applications</li>
+          <li>Created internal NuGet packages to standardize application themes</li>
+          <li>Monitored vulnerability scanning and coordinated remediation plans</li>
+          <li>Helped developed web application security policies and procedures</li>
+          <li>Documented processes and common issues for third party applications</li>
+          <li>Maintained NGINX reverse proxy</li>
+          <li>Coordinated upgrade of CRM system</li>
+          <li>Setup Sharepoint sites for client departments</li>
+        </ul>
 
-    <ul>
-      <li>Created and deployed Ruby on Rails applications with integrations to legacy .NET systems</li>
-      <li>Created and deployed .NET MVC applications</li>
-      <li>Created internal NuGet packages to standardize application themes</li>
-      <li>Monitored vulnerability scanning and coordinated remediation plans</li>
-      <li>Helped developed web application security policies and procedures</li>
-      <li>Documented processes and common issues for third party applications</li>
-      <li>Maintained NGINX reverse proxy</li>
-      <li>Coordinated upgrade of CRM system</li>
-      <li>Setup Sharepoint sites for client departments</li>
-    </ul>
+        <h3>Programmer/Analyst - <em>City of Greater Sudbury</em></h3>
 
-    <h3>Programmer/Analyst - <em>City of Greater Sudbury</em></h3>
+        January 2012 - May 2012
 
-    January 2012 - May 2012
-
-    <ul>
-      <li>Created and deployed Ruby on Rails applications with unit testing</li>
-      <li>Maintained legacy .NET systems</li>
-      <li>Supported and maintained third party systems</li>
-    </ul>
+        <ul>
+          <li>Created and deployed Ruby on Rails applications with unit testing</li>
+          <li>Maintained legacy .NET systems</li>
+          <li>Supported and maintained third party systems</li>
+        </ul>
 
 
-    <h3>Web Engineer - <em>AtreNet</em></h3>
+        <h3>Web Engineer - <em>AtreNet</em></h3>
 
-    August 2004 - January 2012
+        August 2004 - January 2012
 
-    <ul>
-      <li>Created beautiful, semantic, accessible, SEO-friendly, cross-browser compatible HTML templates based on design mockups</li>
-      <li>Worked and communicated seamlessly with remote team members</li>
-      <li>Implemented various CMS (Teamsite, Drupal, DotNetNuke, Joomla) for clients</li>
-      <li>Created websites using in-house PHP libraries</li>
-      <li>Created .Net library to decrease implementation time of .NET sites</li>
-      <li>Created and implemented HTML email newsletter templates</li>
-      <li>Coordinated distribution of HTML newsletters</li>
-      <li>Maintained and regularly updated client websites</li>
-    </ul>
-
+        <ul>
+          <li>Created beautiful, semantic, accessible, SEO-friendly, cross-browser compatible HTML templates based on design mockups</li>
+          <li>Worked and communicated seamlessly with remote team members</li>
+          <li>Implemented various CMS (Teamsite, Drupal, DotNetNuke, Joomla) for clients</li>
+          <li>Created websites using in-house PHP libraries</li>
+          <li>Created .Net library to decrease implementation time of .NET sites</li>
+          <li>Created and implemented HTML email newsletter templates</li>
+          <li>Coordinated distribution of HTML newsletters</li>
+          <li>Maintained and regularly updated client websites</li>
+        </ul>
+      </section>
   </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="bower_components/bootstrap/dist/js/library.js"></script>
   </body>
 </html>
